welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:14: error: Unmatched closing brace '}' ignored here
 }
 ^